# genius-lirycs

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  cspell.json
src/: lib.rs
src/types/: artist.rs  mod.rs  search_results.rs  song.rs
tests/: common.rs  fetch_song.rs  lirycs.rs  search_song.rs
