[package]
name = "genius_lyrics"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
jsonxf = "1.1.1"
regex = "1.11.1"
reqwest = "0.12.15"
scraper = "0.23.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.44.2", features = ["macros"]}
