[package]
name = "genius_lyrics"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
jsonxf = "1.1.1"
regex = "1.12.3"
reqwest = "0.13.2"
scraper = "0.25.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.50.0", features = ["macros"]}
